--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="link">
         <a class="link-2" href="index1.html">Обучение </a>
         <a class="link-3" href="index2.html">NBA </a>
-        <a class="link-4" href="index3.html">Стефен карри </a>
+        <a class="link-4" href="index3.html">Stephen Curry </a>
         <a class="link-5" href="index4.html">Об Авторе </a>
     </div>
     <p class="E">Участник конкурса "КРИТ2023"</p>
