--- a/index1.html
+++ b/index1.html
@@ -15,7 +15,7 @@
     <div class="link">
         <a class="link-1" href="index.html">Баскетбол </a>
         <a class="link-3" href="index2.html">NBA</a>
-        <a class="link-4" href="index3.html">Стефен карри </a>
+        <a class="link-4" href="index3.html">Stephen Curry </a>
         <a href="index4.html" class="link-2">Об Авторе</a>
     </div>
     <div class="hover-text-one">
