--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
         <div class="link">
             <a class="link-1" href="index.html">Баскетбол</a>
             <a class="link-2" href="index1.html">Обучение </a>
-            <a class="link-4" href="index3.html">Стефен карри </a>
+            <a class="link-4" href="index3.html">Stephen Curry</a>
             <a href="index4.html" class="link-3">Об Авторе</a>
         </div>
     </div>
