--- a/index4.html
+++ b/index4.html
@@ -17,7 +17,7 @@
         <a class="link-1" href="index.html">Баскетбол</a>
         <a class="link-2" href="index1.html">Обучение </a>
         <a class="link-3" href="index2.html">NBA</a>
-        <a class="link-4" href="index3.html">Стефен Карри </a>
+        <a class="link-4" href="index3.html">Stephen Curry</a>
     </div>
     <h1>Об Авторе </h1>
     <div class="img">
